[workspace]
members = [
    "./main",

    "./etheris_common",
    "./etheris_macros",
    "./etheris_discord",
    "./etheris_commands",
    "./etheris_database",
    "./etheris_data",
    "./etheris_rpg",
    "./etheris_util"
]
resolver = "2"

[profile.dev] 
opt-level = 1

[workspace.dependencies]
serde = "1.0.195"
serde_json = "1.0.111"
anyhow = "1.0.75"
bson = { version = "2.8.1", features = ["chrono-0_4"] }
rand = "0.8.5"
async-trait = "0.1.77"
chrono = "0.4.31"
image = "0.25.1"
tokio = "1.35.1"
tokio-stream = "0.1.14"
once_cell = "1.19"
unidecode = "0.3"