[package]
name = "etheris_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etheris_common = { path = "../etheris_common" }
etheris_data = { path = "../etheris_data" }

image = { workspace = true }
rand = { workspace = true }
rayon = "1.8"
cached = "0.49.2"